# xf

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml
apps/xf-cube/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
apps/xf-cube/src/lib/components/: Cube.svelte  Skybox.svelte  SphereSprite.svelte
apps/xf-cube/src/routes/: +page.svelte
apps/xf-cube/src/routes/mf/: +page.svelte
apps/xf-pose/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
apps/xf-pose/src/lib/components/: Character.svelte  Pose.svelte
apps/xf-pose/src/routes/: +page.svelte
apps/xf-pose/src/routes/mediapipe/: +page.svelte
apps/xf-sensor-ws/: .env  README.md  index.html  index.js  package.json  pnpm-lock.yaml
apps/xf-server-cube/: package.json  pyproject.toml
apps/xf-server-cube/xf_server_cube/: app.py  setup.py
